--- a/Vacc_Brands_Reactions.ipynb
+++ b/Vacc_Brands_Reactions.ipynb
@@ -42,7 +42,7 @@
         "df=pd.read_csv(r\"ProcessedCovidVaccineReact.csv\")\n",
         "df"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -230,7 +230,7 @@
         "dataset = df.dropna()\n",
         "dataset.shape"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -257,12 +257,15 @@
         "reactionsAndItsKeywords = {'Fever' : ['fever'],\n",
         "                           'Chills': ['chills'],\n",
         "                           'Headache' : ['headache'],\n",
-        "                           'Neck pain' : ['neck pain'],\n",
         "                           'Cold' : ['cold', 'flu'],\n",
         "                           'Body pains' : ['body pain','body pains'],\n",
         "                           'Sore arm' : ['sore arm','arm soreness','arm sore','swollen','injection area','tender arm'],\n",
         "                           'Cough' : ['cough','coughing','sore throat'],\n",
-        "                           'Vomiting' : ['vomiting','throw up', 'nausea']}\n",
+        "                           'Blood Clots' : ['blood clots'],\n",
+        "                           'Vomiting' : ['vomiting','throw up', 'nausea'],\n",
+        "                           'Fatigues' : ['fatigues'],\n",
+        "                           'Heart Attack' :['heartattack','heart attack','heartpain','heart pain'],\n",
+        "                           'Kidney Failure': ['kidney']}\n",
         "\n",
         "# Function to check reactions with respect to each brand\n",
         "def getReactions(brand, reactionVsItsCount):\n",
@@ -284,7 +287,7 @@
         "  return reactionVsItsCount\n",
         "                            "
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -325,7 +328,7 @@
         "\n",
         "print(brandVsReactions)"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -345,7 +348,7 @@
         "# Creating a data frame\n",
         "df = pd.DataFrame(brandVsReactions, index=['Covaxin', 'Pfizer', 'Moderna','Johnson&Johnson','Covishield','Astrazeneca','Sputnik'])"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -364,7 +367,7 @@
         "df.fillna(0, inplace=True)\n",
         "df"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -518,11 +521,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "XSnbmcWaEwyn",
-        "outputId": "9161cfd4-9865-464b-e90f-46d81c7a4bb7",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 419
-        }
+        },
+        "outputId": "9161cfd4-9865-464b-e90f-46d81c7a4bb7"
       },
       "source": [
         "import numpy as np\n",
@@ -580,7 +583,7 @@
         "plt.show()\n",
         "plt.savefig('VaccineReaction.png',dpi=300)"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
