--- a/Vacc_Brands_Reactions.ipynb
+++ b/Vacc_Brands_Reactions.ipynb
@@ -29,7 +29,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "xN9G6h8us6dc"
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 1000
+        },
+        "id": "xN9G6h8us6dc",
+        "outputId": "9f54663f-7c74-47cc-c914-dea62a8365c0"
       },
       "source": [
         "# Importing dataset for analysis\n",
@@ -37,8 +42,190 @@
         "df=pd.read_csv(r\"ProcessedCovidVaccineReact.csv\")\n",
         "df"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>Unnamed: 0</th>\n",
+              "      <th>TweetDate</th>\n",
+              "      <th>TweetText</th>\n",
+              "      <th>CleanedTweet</th>\n",
+              "      <th>TweetAuthor</th>\n",
+              "      <th>TweetLocation</th>\n",
+              "      <th>AllHashtags</th>\n",
+              "      <th>Country</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>0</td>\n",
+              "      <td>2021-03-28 23:59:54</td>\n",
+              "      <td>22 CVS locations show #CovidVaccine slots in C...</td>\n",
+              "      <td>22 cvs locations show covidvaccine slots in ca...</td>\n",
+              "      <td>VaccineCa</td>\n",
+              "      <td>Unknown</td>\n",
+              "      <td>['CovidVaccine']</td>\n",
+              "      <td>Unknown</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>1</td>\n",
+              "      <td>2021-03-28 23:59:47</td>\n",
+              "      <td>2020: We will be back to normal as soon as we ...</td>\n",
+              "      <td>2020 we will be back to normal as soon as we h...</td>\n",
+              "      <td>thinkbalancely</td>\n",
+              "      <td>Australia</td>\n",
+              "      <td>['covid19qld', 'COVID19Aus', 'Covid_19', 'Covi...</td>\n",
+              "      <td>Australia</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>2</td>\n",
+              "      <td>2021-03-28 23:59:24</td>\n",
+              "      <td>Amazingly if you open up the spots for younger...</td>\n",
+              "      <td>amazingly if you open up the spots for younger...</td>\n",
+              "      <td>AureliaCotta</td>\n",
+              "      <td>Toronto</td>\n",
+              "      <td>['topoli', 'onpoli', 'COVID19Vaccine']</td>\n",
+              "      <td>Canada</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>3</td>\n",
+              "      <td>2021-03-28 23:58:40</td>\n",
+              "      <td>@aussieinTO Exactly! Why are they hoarding vac...</td>\n",
+              "      <td>aussieinto exactly why are they hoarding vacci...</td>\n",
+              "      <td>JeanCourtney413</td>\n",
+              "      <td>Retired Teacher/Public Servant</td>\n",
+              "      <td>['CovidVaccine', 'fordfiasco']</td>\n",
+              "      <td>Unknown</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>4</td>\n",
+              "      <td>2021-03-28 23:57:24</td>\n",
+              "      <td>24 hours post-first #covid_19 shot &amp;amp; thank...</td>\n",
+              "      <td>24 hours postfirst covid_19 shot amp thankfull...</td>\n",
+              "      <td>SumunLPendakur</td>\n",
+              "      <td>Los Angeles</td>\n",
+              "      <td>['covid_19', 'vaccinated']</td>\n",
+              "      <td>United States</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>...</th>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>178132</th>\n",
+              "      <td>178132</td>\n",
+              "      <td>2021-04-25 19:55:35</td>\n",
+              "      <td>Double jabbed and feeling very happy (albeit i...</td>\n",
+              "      <td>double jabbed and feeling very happy albeit it...</td>\n",
+              "      <td>bears_katy</td>\n",
+              "      <td>Unknown</td>\n",
+              "      <td>['COVID19Vaccine', 'GetVaccinated', 'FullyVacc...</td>\n",
+              "      <td>Unknown</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>178133</th>\n",
+              "      <td>178133</td>\n",
+              "      <td>2021-04-25 19:55:12</td>\n",
+              "      <td>Northlands is so busy right now you’d think th...</td>\n",
+              "      <td>northlands is so busy right now youd think the...</td>\n",
+              "      <td>Sharpie780</td>\n",
+              "      <td>Edmonton</td>\n",
+              "      <td>['COVIDtesting', 'COVIDvaccine', 'COVIDab']</td>\n",
+              "      <td>Canada</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>178134</th>\n",
+              "      <td>178134</td>\n",
+              "      <td>2021-04-25 19:55:03</td>\n",
+              "      <td>#Covidvaccine clinics for eligible people with...</td>\n",
+              "      <td>covidvaccine clinics for eligible people with ...</td>\n",
+              "      <td>dudleymbc</td>\n",
+              "      <td>Dudley</td>\n",
+              "      <td>['Covidvaccine']</td>\n",
+              "      <td>United Kingdom</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>178135</th>\n",
+              "      <td>178135</td>\n",
+              "      <td>2021-04-25 19:54:37</td>\n",
+              "      <td>Guess who’s fully vaccinated now? 💉 #CovidVacc...</td>\n",
+              "      <td>guess whos fully vaccinated now covidvaccine m...</td>\n",
+              "      <td>enriquevbjr</td>\n",
+              "      <td>California</td>\n",
+              "      <td>['CovidVaccine', 'Moderna', 'VaccinesWork', 'v...</td>\n",
+              "      <td>United States</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>178136</th>\n",
+              "      <td>178136</td>\n",
+              "      <td>2021-04-25 19:53:20</td>\n",
+              "      <td>[ON] Scarborough 40+ at shoppers drug mart #82...</td>\n",
+              "      <td>on scarborough 40 at shoppers drug mart 829 lo...</td>\n",
+              "      <td>VaxHuntersCan</td>\n",
+              "      <td>Canada</td>\n",
+              "      <td>['COVID19', 'COVID19Vaccine', 'COVID19ON', 'vh...</td>\n",
+              "      <td>Canada</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "<p>178137 rows × 8 columns</p>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "        Unnamed: 0  ...         Country\n",
+              "0                0  ...         Unknown\n",
+              "1                1  ...       Australia\n",
+              "2                2  ...          Canada\n",
+              "3                3  ...         Unknown\n",
+              "4                4  ...   United States\n",
+              "...            ...  ...             ...\n",
+              "178132      178132  ...         Unknown\n",
+              "178133      178133  ...          Canada\n",
+              "178134      178134  ...  United Kingdom\n",
+              "178135      178135  ...   United States\n",
+              "178136      178136  ...          Canada\n",
+              "\n",
+              "[178137 rows x 8 columns]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 1
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -47,7 +234,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "5xxwiwXUtSH0",
-        "outputId": "425f0336-ba18-4b81-9da4-5a79cb44b1c6"
+        "outputId": "bdcfa19a-db6c-44a1-d6c8-e3cb28b9ce7c"
       },
       "source": [
         "# Shaping data and dropping nulls\n",
@@ -55,7 +242,7 @@
         "dataset = df.dropna()\n",
         "dataset.shape"
       ],
-      "execution_count": 2,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -67,7 +254,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 2
+          "execution_count": 3
         }
       ]
     },
@@ -106,15 +293,21 @@
         "              if reaction not in reactionVsItsCount.keys():        # If both brand and reactions exist creating dictionary mapping multiple reactions for each brand\n",
         "                reactionVsItsCount[reaction] = 1\n",
         "              else:\n",
-        "                  reactionVsItsCount[reaction] = reactionVsItsCount[reaction]+1\n",
+        "                reactionVsItsCount[reaction] = reactionVsItsCount[reaction]+1\n",
         "            else:\n",
-        "              \n",
+        "              if \"No Mentions\" not in reactionVsItsCount.keys():\n",
+        "                reactionVsItsCount[\"No Mentions\"] = 1\n",
+        "              else:\n",
+        "                reactionVsItsCount[\"No Mentions\"] = reactionVsItsCount[\"No Mentions\"]+1\n",
+        "\n",
+        "\n",
+        "\n",
         "    except Exception as ex:\n",
         "      pass\n",
         "  return reactionVsItsCount\n",
         "                            "
       ],
-      "execution_count": 3,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -124,7 +317,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "xsmc3OwstgCU",
-        "outputId": "44f1bd4c-0b4c-4585-d84a-ea0cf5460fae"
+        "outputId": "471d1a3e-054b-4a0c-d83a-b583c30f014e"
       },
       "source": [
         "# Manually declaring vaccine brands by identifying the existing one from the tweets processed data\n",
@@ -155,12 +348,12 @@
         "\n",
         "print(brandVsReactions)"
       ],
-      "execution_count": 4,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "{'Covaxin': {'Cold': 87, 'No Reactions': 13, 'Fever': 34, 'Kidney Failure': 4, 'Body pains': 10, 'Blood Clots': 36, 'Chills': 17, 'Headache': 21, 'Cough': 6, 'Sore arm': 29, 'Vomiting': 3, 'Heart Attack': 4}, 'Pfizer': {'Sore arm': 338, 'Fever': 192, 'Headache': 244, 'Vomiting': 50, 'Chills': 115, 'Cold': 163, 'Kidney Failure': 8, 'No Reactions': 37, 'Cough': 24, 'Blood Clots': 53, 'Heart Attack': 11, 'Body pains': 2}, 'Moderna': {'Sore arm': 204, 'Kidney Failure': 4, 'Fever': 155, 'Chills': 116, 'Cold': 124, 'Headache': 168, 'No Reactions': 22, 'Vomiting': 36, 'Blood Clots': 27, 'Cough': 4, 'Body pains': 1, 'Heart Attack': 2}, 'Johnson&Johnson': {'Cold': 92, 'Blood Clots': 345, 'Kidney Failure': 2, 'Headache': 103, 'Chills': 70, 'Fever': 87, 'Cough': 23, 'Vomiting': 17, 'Sore arm': 60, 'Fatigues': 3}, 'Covishield': {'Blood Clots': 8, 'Fever': 35, 'No Reactions': 2, 'Kidney Failure': 1, 'Body pains': 8, 'Vomiting': 3, 'Cough': 5, 'Chills': 1, 'Headache': 4, 'Cold': 4}, 'Astrazeneca': {'Sore arm': 67, 'Cold': 102, 'Fever': 73, 'Headache': 130, 'Kidney Failure': 8, 'Cough': 9, 'Blood Clots': 698, 'Chills': 38, 'Vomiting': 17, 'No Reactions': 23, 'Heart Attack': 9, 'Body pains': 6, 'Fatigues': 1}, 'Sputnik': {'Blood Clots': 9, 'Cold': 23, 'Sore arm': 3, 'Body pains': 2}}\n"
+            "{'Covaxin': {'No Mentions': 282890, 'Cold': 87, 'No Reactions': 13, 'Fever': 34, 'Kidney Failure': 4, 'Body pains': 10, 'Blood Clots': 36, 'Chills': 17, 'Headache': 21, 'Cough': 6, 'Sore arm': 29, 'Vomiting': 3, 'Heart Attack': 4}, 'Pfizer': {'No Mentions': 486889, 'Sore arm': 338, 'Fever': 192, 'Headache': 244, 'Vomiting': 50, 'Chills': 115, 'Cold': 163, 'Kidney Failure': 8, 'No Reactions': 37, 'Cough': 24, 'Blood Clots': 53, 'Heart Attack': 11, 'Body pains': 2}, 'Moderna': {'No Mentions': 243448, 'Sore arm': 204, 'Kidney Failure': 4, 'Fever': 155, 'Chills': 116, 'Cold': 124, 'Headache': 168, 'No Reactions': 22, 'Vomiting': 36, 'Blood Clots': 27, 'Cough': 4, 'Body pains': 1, 'Heart Attack': 2}, 'Johnson&Johnson': {'No Mentions': 270944, 'Cold': 92, 'Blood Clots': 345, 'Kidney Failure': 2, 'Headache': 103, 'Chills': 70, 'Fever': 87, 'Cough': 23, 'Vomiting': 17, 'Sore arm': 60, 'Fatigues': 3}, 'Covishield': {'No Mentions': 45406, 'Blood Clots': 8, 'Fever': 35, 'No Reactions': 2, 'Kidney Failure': 1, 'Body pains': 8, 'Vomiting': 3, 'Cough': 5, 'Chills': 1, 'Headache': 4, 'Cold': 4}, 'Astrazeneca': {'No Mentions': 287460, 'Sore arm': 67, 'Cold': 102, 'Fever': 73, 'Headache': 130, 'Kidney Failure': 8, 'Cough': 9, 'Blood Clots': 698, 'Chills': 38, 'Vomiting': 17, 'No Reactions': 23, 'Heart Attack': 9, 'Body pains': 6, 'Fatigues': 1}, 'Sputnik': {'No Mentions': 44355, 'Blood Clots': 9, 'Cold': 23, 'Sore arm': 3, 'Body pains': 2}}\n"
           ],
           "name": "stdout"
         }
@@ -175,7 +368,7 @@
         "# Creating a data frame\n",
         "df = pd.DataFrame(brandVsReactions, index=['Covaxin', 'Pfizer', 'Moderna','Johnson&Johnson','Covishield','Astrazeneca','Sputnik'])"
       ],
-      "execution_count": 5,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -183,10 +376,10 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 557
+          "height": 605
         },
         "id": "slmnI6DOt7ej",
-        "outputId": "23eba378-df4f-4ca2-e9de-7602f8c2cf58"
+        "outputId": "0b0af1d9-74cf-4539-d29e-ebdec5f4838e"
       },
       "source": [
         "# Dropping Nan if exist\n",
@@ -194,7 +387,7 @@
         "df.fillna(0, inplace=True)\n",
         "df"
       ],
-      "execution_count": 6,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -228,6 +421,16 @@
               "    </tr>\n",
               "  </thead>\n",
               "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>No Mentions</th>\n",
+              "      <td>282890.0</td>\n",
+              "      <td>486889.0</td>\n",
+              "      <td>243448.0</td>\n",
+              "      <td>270944.0</td>\n",
+              "      <td>45406.0</td>\n",
+              "      <td>287460</td>\n",
+              "      <td>44355.0</td>\n",
+              "    </tr>\n",
               "    <tr>\n",
               "      <th>Cold</th>\n",
               "      <td>87.0</td>\n",
@@ -363,28 +566,29 @@
               "</div>"
             ],
             "text/plain": [
-              "                Covaxin  Pfizer  Moderna  ...  Covishield  Astrazeneca  Sputnik\n",
-              "Cold               87.0   163.0    124.0  ...         4.0          102     23.0\n",
-              "No Reactions       13.0    37.0     22.0  ...         2.0           23      0.0\n",
-              "Fever              34.0   192.0    155.0  ...        35.0           73      0.0\n",
-              "Kidney Failure      4.0     8.0      4.0  ...         1.0            8      0.0\n",
-              "Body pains         10.0     2.0      1.0  ...         8.0            6      2.0\n",
-              "Blood Clots        36.0    53.0     27.0  ...         8.0          698      9.0\n",
-              "Chills             17.0   115.0    116.0  ...         1.0           38      0.0\n",
-              "Headache           21.0   244.0    168.0  ...         4.0          130      0.0\n",
-              "Cough               6.0    24.0      4.0  ...         5.0            9      0.0\n",
-              "Sore arm           29.0   338.0    204.0  ...         0.0           67      3.0\n",
-              "Vomiting            3.0    50.0     36.0  ...         3.0           17      0.0\n",
-              "Heart Attack        4.0    11.0      2.0  ...         0.0            9      0.0\n",
-              "Fatigues            0.0     0.0      0.0  ...         0.0            1      0.0\n",
+              "                 Covaxin    Pfizer   Moderna  ...  Covishield  Astrazeneca  Sputnik\n",
+              "No Mentions     282890.0  486889.0  243448.0  ...     45406.0       287460  44355.0\n",
+              "Cold                87.0     163.0     124.0  ...         4.0          102     23.0\n",
+              "No Reactions        13.0      37.0      22.0  ...         2.0           23      0.0\n",
+              "Fever               34.0     192.0     155.0  ...        35.0           73      0.0\n",
+              "Kidney Failure       4.0       8.0       4.0  ...         1.0            8      0.0\n",
+              "Body pains          10.0       2.0       1.0  ...         8.0            6      2.0\n",
+              "Blood Clots         36.0      53.0      27.0  ...         8.0          698      9.0\n",
+              "Chills              17.0     115.0     116.0  ...         1.0           38      0.0\n",
+              "Headache            21.0     244.0     168.0  ...         4.0          130      0.0\n",
+              "Cough                6.0      24.0       4.0  ...         5.0            9      0.0\n",
+              "Sore arm            29.0     338.0     204.0  ...         0.0           67      3.0\n",
+              "Vomiting             3.0      50.0      36.0  ...         3.0           17      0.0\n",
+              "Heart Attack         4.0      11.0       2.0  ...         0.0            9      0.0\n",
+              "Fatigues             0.0       0.0       0.0  ...         0.0            1      0.0\n",
               "\n",
-              "[13 rows x 7 columns]"
+              "[14 rows x 7 columns]"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 6
+          "execution_count": 7
         }
       ]
     },
