--- a/Vacc_Brands_Reactions.ipynb
+++ b/Vacc_Brands_Reactions.ipynb
@@ -34,7 +34,7 @@
           "height": 1000
         },
         "id": "xN9G6h8us6dc",
-        "outputId": "9f54663f-7c74-47cc-c914-dea62a8365c0"
+        "outputId": "6f56a0bc-180e-404b-de4c-02da22f1d165"
       },
       "source": [
         "# Importing dataset for analysis\n",
@@ -42,7 +42,7 @@
         "df=pd.read_csv(r\"ProcessedCovidVaccineReact.csv\")\n",
         "df"
       ],
-      "execution_count": 1,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -223,7 +223,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 1
+          "execution_count": 8
         }
       ]
     },
@@ -234,7 +234,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "5xxwiwXUtSH0",
-        "outputId": "bdcfa19a-db6c-44a1-d6c8-e3cb28b9ce7c"
+        "outputId": "8b3a8ee3-41b3-4996-9e32-4d6ba830d0ed"
       },
       "source": [
         "# Shaping data and dropping nulls\n",
@@ -242,7 +242,7 @@
         "dataset = df.dropna()\n",
         "dataset.shape"
       ],
-      "execution_count": 3,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -254,7 +254,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 3
+          "execution_count": 9
         }
       ]
     },
@@ -277,8 +277,7 @@
         "                           'Vomiting' : ['vomiting','throw up', 'nausea'],\n",
         "                           'Fatigues' : ['fatigues'],\n",
         "                           'Heart Attack' :['heartattack','heart attack','heartpain','heart pain'],\n",
-        "                           'Kidney Failure': ['kidney'],\n",
-        "                           'No Reactions': ['all good','all safe','no reactions','all happy','safe and happy']}\n",
+        "                           'Kidney Failure': ['kidney']}\n",
         "\n",
         "# Function to check reactions with respect to each brand\n",
         "def getReactions(brand, reactionVsItsCount):\n",
@@ -294,12 +293,7 @@
         "                reactionVsItsCount[reaction] = 1\n",
         "              else:\n",
         "                reactionVsItsCount[reaction] = reactionVsItsCount[reaction]+1\n",
-        "            else:\n",
-        "              if \"No Mentions\" not in reactionVsItsCount.keys():\n",
-        "                reactionVsItsCount[\"No Mentions\"] = 1\n",
-        "              else:\n",
-        "                reactionVsItsCount[\"No Mentions\"] = reactionVsItsCount[\"No Mentions\"]+1\n",
-        "\n",
+        "              \n",
         "\n",
         "\n",
         "    except Exception as ex:\n",
@@ -307,7 +301,7 @@
         "  return reactionVsItsCount\n",
         "                            "
       ],
-      "execution_count": 4,
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -317,7 +311,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "xsmc3OwstgCU",
-        "outputId": "471d1a3e-054b-4a0c-d83a-b583c30f014e"
+        "outputId": "21168fb6-b68f-4e99-8461-06061ca3e20f"
       },
       "source": [
         "# Manually declaring vaccine brands by identifying the existing one from the tweets processed data\n",
@@ -348,12 +342,12 @@
         "\n",
         "print(brandVsReactions)"
       ],
-      "execution_count": 5,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "{'Covaxin': {'No Mentions': 282890, 'Cold': 87, 'No Reactions': 13, 'Fever': 34, 'Kidney Failure': 4, 'Body pains': 10, 'Blood Clots': 36, 'Chills': 17, 'Headache': 21, 'Cough': 6, 'Sore arm': 29, 'Vomiting': 3, 'Heart Attack': 4}, 'Pfizer': {'No Mentions': 486889, 'Sore arm': 338, 'Fever': 192, 'Headache': 244, 'Vomiting': 50, 'Chills': 115, 'Cold': 163, 'Kidney Failure': 8, 'No Reactions': 37, 'Cough': 24, 'Blood Clots': 53, 'Heart Attack': 11, 'Body pains': 2}, 'Moderna': {'No Mentions': 243448, 'Sore arm': 204, 'Kidney Failure': 4, 'Fever': 155, 'Chills': 116, 'Cold': 124, 'Headache': 168, 'No Reactions': 22, 'Vomiting': 36, 'Blood Clots': 27, 'Cough': 4, 'Body pains': 1, 'Heart Attack': 2}, 'Johnson&Johnson': {'No Mentions': 270944, 'Cold': 92, 'Blood Clots': 345, 'Kidney Failure': 2, 'Headache': 103, 'Chills': 70, 'Fever': 87, 'Cough': 23, 'Vomiting': 17, 'Sore arm': 60, 'Fatigues': 3}, 'Covishield': {'No Mentions': 45406, 'Blood Clots': 8, 'Fever': 35, 'No Reactions': 2, 'Kidney Failure': 1, 'Body pains': 8, 'Vomiting': 3, 'Cough': 5, 'Chills': 1, 'Headache': 4, 'Cold': 4}, 'Astrazeneca': {'No Mentions': 287460, 'Sore arm': 67, 'Cold': 102, 'Fever': 73, 'Headache': 130, 'Kidney Failure': 8, 'Cough': 9, 'Blood Clots': 698, 'Chills': 38, 'Vomiting': 17, 'No Reactions': 23, 'Heart Attack': 9, 'Body pains': 6, 'Fatigues': 1}, 'Sputnik': {'No Mentions': 44355, 'Blood Clots': 9, 'Cold': 23, 'Sore arm': 3, 'Body pains': 2}}\n"
+            "{'Covaxin': {'Cold': 87, 'Fever': 34, 'Kidney Failure': 4, 'Body pains': 10, 'Blood Clots': 36, 'Chills': 17, 'Headache': 21, 'Cough': 6, 'Sore arm': 29, 'Vomiting': 3, 'Heart Attack': 4}, 'Pfizer': {'Sore arm': 338, 'Fever': 192, 'Headache': 244, 'Vomiting': 50, 'Chills': 115, 'Cold': 163, 'Kidney Failure': 8, 'Cough': 24, 'Blood Clots': 53, 'Heart Attack': 11, 'Body pains': 2}, 'Moderna': {'Sore arm': 204, 'Kidney Failure': 4, 'Fever': 155, 'Chills': 116, 'Cold': 124, 'Headache': 168, 'Vomiting': 36, 'Blood Clots': 27, 'Cough': 4, 'Body pains': 1, 'Heart Attack': 2}, 'Johnson&Johnson': {'Cold': 92, 'Blood Clots': 345, 'Kidney Failure': 2, 'Headache': 103, 'Chills': 70, 'Fever': 87, 'Cough': 23, 'Vomiting': 17, 'Sore arm': 60, 'Fatigues': 3}, 'Covishield': {'Blood Clots': 8, 'Fever': 35, 'Kidney Failure': 1, 'Body pains': 8, 'Vomiting': 3, 'Cough': 5, 'Chills': 1, 'Headache': 4, 'Cold': 4}, 'Astrazeneca': {'Sore arm': 67, 'Cold': 102, 'Fever': 73, 'Headache': 130, 'Kidney Failure': 8, 'Cough': 9, 'Blood Clots': 698, 'Chills': 38, 'Vomiting': 17, 'Heart Attack': 9, 'Body pains': 6, 'Fatigues': 1}, 'Sputnik': {'Blood Clots': 9, 'Cold': 23, 'Sore arm': 3, 'Body pains': 2}}\n"
           ],
           "name": "stdout"
         }
@@ -368,7 +362,7 @@
         "# Creating a data frame\n",
         "df = pd.DataFrame(brandVsReactions, index=['Covaxin', 'Pfizer', 'Moderna','Johnson&Johnson','Covishield','Astrazeneca','Sputnik'])"
       ],
-      "execution_count": 6,
+      "execution_count": 14,
       "outputs": []
     },
     {
@@ -376,10 +370,10 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 605
+          "height": 509
         },
         "id": "slmnI6DOt7ej",
-        "outputId": "0b0af1d9-74cf-4539-d29e-ebdec5f4838e"
+        "outputId": "1a6f594e-d002-405d-8685-2f345613850d"
       },
       "source": [
         "# Dropping Nan if exist\n",
@@ -387,7 +381,7 @@
         "df.fillna(0, inplace=True)\n",
         "df"
       ],
-      "execution_count": 7,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -422,16 +416,6 @@
               "  </thead>\n",
               "  <tbody>\n",
               "    <tr>\n",
-              "      <th>No Mentions</th>\n",
-              "      <td>282890.0</td>\n",
-              "      <td>486889.0</td>\n",
-              "      <td>243448.0</td>\n",
-              "      <td>270944.0</td>\n",
-              "      <td>45406.0</td>\n",
-              "      <td>287460</td>\n",
-              "      <td>44355.0</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
               "      <th>Cold</th>\n",
               "      <td>87.0</td>\n",
               "      <td>163.0</td>\n",
@@ -440,16 +424,6 @@
               "      <td>4.0</td>\n",
               "      <td>102</td>\n",
               "      <td>23.0</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>No Reactions</th>\n",
-              "      <td>13.0</td>\n",
-              "      <td>37.0</td>\n",
-              "      <td>22.0</td>\n",
-              "      <td>0.0</td>\n",
-              "      <td>2.0</td>\n",
-              "      <td>23</td>\n",
-              "      <td>0.0</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>Fever</th>\n",
@@ -566,29 +540,27 @@
               "</div>"
             ],
             "text/plain": [
-              "                 Covaxin    Pfizer   Moderna  ...  Covishield  Astrazeneca  Sputnik\n",
-              "No Mentions     282890.0  486889.0  243448.0  ...     45406.0       287460  44355.0\n",
-              "Cold                87.0     163.0     124.0  ...         4.0          102     23.0\n",
-              "No Reactions        13.0      37.0      22.0  ...         2.0           23      0.0\n",
-              "Fever               34.0     192.0     155.0  ...        35.0           73      0.0\n",
-              "Kidney Failure       4.0       8.0       4.0  ...         1.0            8      0.0\n",
-              "Body pains          10.0       2.0       1.0  ...         8.0            6      2.0\n",
-              "Blood Clots         36.0      53.0      27.0  ...         8.0          698      9.0\n",
-              "Chills              17.0     115.0     116.0  ...         1.0           38      0.0\n",
-              "Headache            21.0     244.0     168.0  ...         4.0          130      0.0\n",
-              "Cough                6.0      24.0       4.0  ...         5.0            9      0.0\n",
-              "Sore arm            29.0     338.0     204.0  ...         0.0           67      3.0\n",
-              "Vomiting             3.0      50.0      36.0  ...         3.0           17      0.0\n",
-              "Heart Attack         4.0      11.0       2.0  ...         0.0            9      0.0\n",
-              "Fatigues             0.0       0.0       0.0  ...         0.0            1      0.0\n",
+              "                Covaxin  Pfizer  Moderna  ...  Covishield  Astrazeneca  Sputnik\n",
+              "Cold               87.0   163.0    124.0  ...         4.0          102     23.0\n",
+              "Fever              34.0   192.0    155.0  ...        35.0           73      0.0\n",
+              "Kidney Failure      4.0     8.0      4.0  ...         1.0            8      0.0\n",
+              "Body pains         10.0     2.0      1.0  ...         8.0            6      2.0\n",
+              "Blood Clots        36.0    53.0     27.0  ...         8.0          698      9.0\n",
+              "Chills             17.0   115.0    116.0  ...         1.0           38      0.0\n",
+              "Headache           21.0   244.0    168.0  ...         4.0          130      0.0\n",
+              "Cough               6.0    24.0      4.0  ...         5.0            9      0.0\n",
+              "Sore arm           29.0   338.0    204.0  ...         0.0           67      3.0\n",
+              "Vomiting            3.0    50.0     36.0  ...         3.0           17      0.0\n",
+              "Heart Attack        4.0    11.0      2.0  ...         0.0            9      0.0\n",
+              "Fatigues            0.0     0.0      0.0  ...         0.0            1      0.0\n",
               "\n",
-              "[14 rows x 7 columns]"
+              "[12 rows x 7 columns]"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 7
+          "execution_count": 15
         }
       ]
     },
